# RGBDGaze

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
GazeEstimation/: lopo.py  utils.py
GazeEstimation/config/: rgb.yml  rgbd.yml
GazeEstimation/datasets/: rgbddataset.py  utils.py
GazeEstimation/models/: spatial_weights_cnn.py  two_stream.py  utils.py
GazeEstimation/preprocess/: format.py
